--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -462,6 +462,7 @@
     <ClInclude Include="Depend\SOIL\stbi_DDS_aug_c.h" />
     <ClInclude Include="Depend\SOIL\stb_image_aug.h" />
     <ClInclude Include="src\Headers.h" />
+    <ClInclude Include="src\Shaders.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Depend\glm\CMakeLists.txt" />
