--- a/OpenGLTest3/OpenGLTest3.vcxproj.filters
+++ b/OpenGLTest3/OpenGLTest3.vcxproj.filters
@@ -1378,4 +1378,9 @@
     <None Include="res\shaders\Grid.shader" />
     <None Include="res\shaders\Shader.shader" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\textures\Texture1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
