--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -684,11 +684,11 @@
     <None Include="Depend\glm\gtx\vector_angle.inl" />
     <None Include="Depend\glm\gtx\vector_query.inl" />
     <None Include="Depend\glm\gtx\wrap.inl" />
-    <None Include="res\shaders\Grid.shader" />
     <None Include="res\shaders\Shader.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\Texture1.png" />
+    <Image Include="res\textures\Texture2.png" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Depend\lib-vc2022\glew32.lib" />
