--- a/OpenGLTest3/OpenGLTest3.vcxproj.filters
+++ b/OpenGLTest3/OpenGLTest3.vcxproj.filters
@@ -1396,12 +1396,14 @@
     <None Include="Depend\glm\gtx\wrap.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="res\shaders\Grid.shader" />
     <None Include="res\shaders\Shader.shader" />
     <None Include="Depend\glm\CMakeSettings.json" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\Texture1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\Texture2.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
