Almost 3d, just issues with background color leaking through edges

--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -687,6 +687,7 @@
     <None Include="res\shaders\Shader.shader" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\textures\Deor.png" />
     <Image Include="res\textures\Texture1.png" />
     <Image Include="res\textures\Texture2.png" />
   </ItemGroup>
