--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -218,6 +218,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entities\Cube.cpp" />
+    <ClCompile Include="Entities\Entity.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="Depend\glad\gl.c" />
     <ClCompile Include="Depend\glad\linmath_test.c" />
@@ -233,6 +235,9 @@
     <ClCompile Include="src\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entities\Components.h" />
+    <ClInclude Include="Entities\Cube.h" />
+    <ClInclude Include="Entities\Entity.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="Depend\glad\gl.h" />
     <ClInclude Include="Depend\glad\KHR\khrplatform.h" />
@@ -689,6 +694,7 @@
     <None Include="res\shaders\Shader.shader" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\textures\Default.png" />
     <Image Include="res\textures\Deor.png" />
     <Image Include="res\textures\Sky.png" />
     <Image Include="res\textures\Texture1.png" />
