start of a skybox

--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -697,6 +697,7 @@
     <Image Include="res\textures\Default.png" />
     <Image Include="res\textures\Deor.png" />
     <Image Include="res\textures\Sky.png" />
+    <Image Include="res\textures\skybox2.png" />
     <Image Include="res\textures\Texture1.png" />
     <Image Include="res\textures\Texture2.png" />
   </ItemGroup>
