--- a/OpenGLTest3/OpenGLTest3.vcxproj
+++ b/OpenGLTest3/OpenGLTest3.vcxproj
@@ -218,6 +218,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Depend\IMGUI\imgui.cpp" />
+    <ClCompile Include="Depend\IMGUI\imgui_demo.cpp" />
+    <ClCompile Include="Depend\IMGUI\imgui_draw.cpp" />
+    <ClCompile Include="Depend\IMGUI\imgui_tables.cpp" />
+    <ClCompile Include="Depend\IMGUI\imgui_widgets.cpp" />
     <ClCompile Include="Entities\Cube.cpp" />
     <ClCompile Include="Entities\Entity.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -235,6 +240,12 @@
     <ClCompile Include="src\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Depend\IMGUI\imconfig.h" />
+    <ClInclude Include="Depend\IMGUI\imgui.h" />
+    <ClInclude Include="Depend\IMGUI\imgui_internal.h" />
+    <ClInclude Include="Depend\IMGUI\imstb_rectpack.h" />
+    <ClInclude Include="Depend\IMGUI\imstb_textedit.h" />
+    <ClInclude Include="Depend\IMGUI\imstb_truetype.h" />
     <ClInclude Include="Entities\Components.h" />
     <ClInclude Include="Entities\Cube.h" />
     <ClInclude Include="Entities\Entity.h" />
