--- a/OpenGLTest3/imgui.ini
+++ b/OpenGLTest3/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=122,251
-Size=511,278
+Pos=-3,2
+Size=472,278
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=86,72
-Size=550,680
+Pos=528,259
+Size=553,680
 Collapsed=0
 
 [Window][Example: Log]
@@ -27,4 +27,38 @@ Collapsed=0
 Pos=60,60
 Size=198,71
 Collapsed=0
+
+[Window][Entities]
+Pos=0,280
+Size=470,739
+Collapsed=0
+
+[Window][Data]
+Pos=1515,2
+Size=403,1016
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=458,318
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
