Added viewport in seperate location

--- a/OpenGLTest3/imgui.ini
+++ b/OpenGLTest3/imgui.ini
@@ -9,7 +9,7 @@ Size=472,278
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=528,259
+Pos=525,259
 Size=553,680
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=470,739
 Collapsed=0
 
 [Window][Data]
-Pos=1515,2
+Pos=781,2
 Size=403,1016
 Collapsed=0
 
@@ -56,6 +56,16 @@ Collapsed=0
 [Window][Example: Property editor]
 Pos=60,60
 Size=430,450
+Collapsed=0
+
+[Window][Scene]
+Pos=61,3
+Size=1810,720
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=61,191
+Size=485,414
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
