--- a/OpenGLTest3/imgui.ini
+++ b/OpenGLTest3/imgui.ini
@@ -1,74 +1,45 @@
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1920,1017
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Scene]
+Pos=340,0
+Size=1276,865
+Collapsed=0
+DockId=0x00000007,0
+
 [Window][Hello, world!]
-Pos=-3,2
-Size=472,278
+Pos=0,334
+Size=338,683
 Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=525,259
-Size=553,680
-Collapsed=0
-
-[Window][Example: Log]
-Pos=60,60
-Size=500,400
-Collapsed=0
-
-[Window][Dear ImGui Metrics/Debugger]
-Pos=60,60
-Size=346,290
-Collapsed=0
-
-[Window][Another Window]
-Pos=60,60
-Size=198,71
-Collapsed=0
-
-[Window][Entities]
-Pos=0,280
-Size=470,739
-Collapsed=0
+DockId=0x00000004,0
 
 [Window][Data]
-Pos=1520,0
-Size=403,1016
+Pos=1618,0
+Size=302,1017
 Collapsed=0
+DockId=0x00000006,0
 
-[Window][Dear ImGui Stack Tool]
-Pos=60,60
-Size=354,104
+[Window][Entities]
+Pos=0,0
+Size=338,332
 Collapsed=0
+DockId=0x00000003,0
 
-[Window][Example: Auto-resizing window]
-Pos=60,60
-Size=458,318
-Collapsed=0
-
-[Window][Example: Documents]
-Pos=60,60
-Size=607,921
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=60,60
-Size=430,450
-Collapsed=0
-
-[Window][Scene]
-Pos=466,9
-Size=1054,761
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=61,191
-Size=485,414
-Collapsed=0
-
-[Table][0xD0F0C6E3,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Docking][Data]
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1017 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1616,1017 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=338,1017 Split=Y Selected=0xD00C9CD4
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=338,332 Selected=0xA628E342
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=338,683 Selected=0xD00C9CD4
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1276,1017 Split=Y
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=1276,865 Selected=0xE192E354
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1276,150 CentralNode=1
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=302,1017 Selected=0x79579D41
 
